k8s/ingress.yml
# ingress-controller 설치 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: som-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2 #첫번째 prefix제거 /jang 제거
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
  - hosts:
    - "server.greatjang.shop" #수정 필요
    secretName: som-com-tls
  rules:
    - host: server.greatjang.shop # 수정 필요
      http:
        paths:
          - path: /admin/(.*) #모든 url요청을 nginx-service로 라우팅 # 수정 필요
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 80

          - path: /board/(.*) #모든 url요청을 nginx-service로 라우팅 # 수정필요
            pathType: Prefix
            backend:
              service:
                name: board-service
                port:
                  number: 80
                  
          - path: /batch/(.*) #모든 url요청을 nginx-service로 라우팅 # 수정필요
            pathType: Prefix
            backend:
              service:
                name: batch-service
                port:
                  number: 80
                  
          - path: /redis/(.*) #모든 url요청을 nginx-service로 라우팅 # 수정필요 - redis url은 필요없는데..??
            pathType: Prefix
            backend:
              service:
                name: redis-service
                port:
                  number: 80
